Started explaining things

--- a/index.html
+++ b/index.html
@@ -49,11 +49,17 @@
       <span class="small">by <a href="http://github.com/alaricsp">alaricsp</a></span></h1>
 
     <div class="description">
-      My WoPoWriMo efforts. I plan to write a haiku a day through all of Febuary.
+      My <a href="http://www.wopowrimo.org/">WoPoWriMo</a> efforts. I plan to write a haiku a day through all of Febuary.
     </div>
 
+    <p>I'll put each haiku into its own file, and link to them from this page as I do them.</p>
+
+    <p>So watch this space!</p>
+
+    <p>NOTE: I've never written a haiku before in my life. Do not expect great things here.</p>
+
     <h2>Contact</h2>
-<p>Alaric Snell-Pym (alaric@snell-pym.org.uk)<br/>      </p>
+	<p>Alaric Snell-Pym (alaric@snell-pym.org.uk)</p>
 
 
     <h2>Download</h2>
