A bit more explanation. The beginnings of a list of links.

--- a/index.html
+++ b/index.html
@@ -49,14 +49,47 @@
       <span class="small">by <a href="http://github.com/alaricsp">alaricsp</a></span></h1>
 
     <div class="description">
-      My <a href="http://www.wopowrimo.org/">WoPoWriMo</a> efforts. I plan to write a <a href="http://en.wikipedia.org/wiki/Haiku_in_English">haiku</a> a day through all of February.
+      These are my <a href="http://www.wopowrimo.org/">WoPoWriMo</a> efforts. I plan to write one <a href="http://en.wikipedia.org/wiki/Haiku_in_English">haiku</a> a day through all of February. Not necessarily <em>on</em> each day - I might write a few on one day, and none on other days; but each one will correspond to a day.
     </div>
 
-    <p>I'll put each haiku into its own file, and link to them from this page as I do them.</p>
-
-    <p>So watch this space!</p>
+    <p>I'll put each haiku into its own file, and link to them from this page as I do them. I'm editing them in <a href="http://www.gnu.org/software/emacs/">Emacs</a> on a <a href="http://www.netbsd.org/">NetBSD</a> laptop, version-tracking it in <a href="http://git-scm.com/">git</a>, and publishing it on <a href="http://github.com/">GitHub</a> via their <a href="http://pages.github.com/">pages</a> system. I couldn't be more "Bay Area Trendy Geek" unless I was doing it from my iPhone, and had an oriental-looking girlfriend.</p>
 
     <p>NOTE: I've never written a haiku before in my life. Do not expect great things here.</p>
+
+    <h2>The Haikus</h2>
+
+    <p>Nothing to see yet... Wait until February!</p>
+
+<!--    <ul> -->
+<!--      <li><a href="1.txt">One</a></li> -->
+<!--      <li><a href="2.txt">Two</a></li> -->
+<!--      <li><a href="3.txt">Three</a></li> -->
+<!--      <li><a href="4.txt">Four</a></li> -->
+<!--      <li><a href="5.txt">Five</a></li> -->
+<!--      <li><a href="6.txt">Six</a></li> -->
+<!--      <li><a href="7.txt">Seven</a></li> -->
+<!--      <li><a href="8.txt">Eight</a></li> -->
+<!--      <li><a href="9.txt">Nine</a></li> -->
+<!--      <li><a href="10.txt">Ten</a></li> -->
+<!--      <li><a href="11.txt">Eleven</a></li> -->
+<!--      <li><a href="12.txt">Twelve</a></li> -->
+<!--      <li><a href="13.txt">Thirteen</a></li> -->
+<!--      <li><a href="14.txt">Fourteen</a></li> -->
+<!--      <li><a href="15.txt">Fifteen</a></li> -->
+<!--      <li><a href="16.txt">Sixteen</a></li> -->
+<!--      <li><a href="17.txt">Seventeen</a></li> -->
+<!--      <li><a href="18.txt">Eighteen</a></li> -->
+<!--      <li><a href="19.txt">Nineteen</a></li> -->
+<!--      <li><a href="20.txt">Twenty</a></li> -->
+<!--      <li><a href="21.txt">Twenty-One</a></li> -->
+<!--      <li><a href="22.txt">Twenty-Two</a></li> -->
+<!--      <li><a href="23.txt">Twenty-Three</a></li> -->
+<!--      <li><a href="24.txt">Twenty-Four</a></li> -->
+<!--      <li><a href="25.txt">Twenty-Five</a></li> -->
+<!--      <li><a href="26.txt">Twenty-Six</a></li> -->
+<!--      <li><a href="27.txt">Twenty-Seven</a></li> -->
+<!--      <li><a href="28.txt">Twenty-Eight</a></li> -->
+<!--    </ul> -->
 
     <h2>Contact</h2>
 	<p>Alaric Snell-Pym (alaric@snell-pym.org.uk)</p>
