--- a/index.html
+++ b/index.html
@@ -58,10 +58,8 @@
 
     <h2>The Haikus</h2>
 
-    <p>Nothing to see yet... Wait until February!</p>
-
-<!--    <ul> -->
-<!--      <li><a href="1.txt">One</a></li> -->
+    <ul>
+      <li><a href="1.txt">One</a></li>
 <!--      <li><a href="2.txt">Two</a></li> -->
 <!--      <li><a href="3.txt">Three</a></li> -->
 <!--      <li><a href="4.txt">Four</a></li> -->
@@ -89,7 +87,7 @@
 <!--      <li><a href="26.txt">Twenty-Six</a></li> -->
 <!--      <li><a href="27.txt">Twenty-Seven</a></li> -->
 <!--      <li><a href="28.txt">Twenty-Eight</a></li> -->
-<!--    </ul> -->
+    </ul>
 
     <h2>Contact</h2>
 	<p>Alaric Snell-Pym (alaric@snell-pym.org.uk)</p>
