Added a bit more optimism to the index page.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <p>I'll put each haiku into its own file, and link to them from this page as I do them. I'm editing them in <a href="http://www.gnu.org/software/emacs/">Emacs</a> on a <a href="http://www.netbsd.org/">NetBSD</a> laptop, version-tracking it in <a href="http://git-scm.com/">git</a>, and publishing it on <a href="http://github.com/">GitHub</a> via their <a href="http://pages.github.com/">pages</a> system. I couldn't be more "Bay Area Trendy Geek" unless I was doing it from my iPhone, and had an oriental-looking girlfriend.</p>
 
-    <p>NOTE: I've never written a haiku before in my life. Do not expect great things here.</p>
+    <p>NOTE: I've never written a haiku before in my life. Do not expect great things here. However, I might improve through the month.</p>
 
     <h2>The Haikus</h2>
 
