--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
     </p>
 
     <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/alaricsp/wopowrimo">alaricsp/wopowrimo</a>
+      get the source code on GitHub : <a href="http://github.com/alaricsp/wopowrimo">alaricsp/wopowrimo</a><br>
+	<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/2.0/uk/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/2.0/uk/88x31.png" /></a><br /><span xmlns:dc="http://purl.org/dc/elements/1.1/" href="http://purl.org/dc/dcmitype/Text" property="dc:title" rel="dc:type">Alaric Snell-Pym's WoPoWrimo Haikus</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://www.snell-pym.org.uk/alaric/" property="cc:attributionName" rel="cc:attributionURL">Alaric Snell-Pym</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/2.0/uk/">Creative Commons Attribution-Noncommercial-Share Alike 2.0 UK: England &amp; Wales License</a>.
     </div>
 
   </div>
