--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <li><a href="2.txt">Two</a></li>
       <li><a href="3.txt">Three</a></li>
       <li><a href="4.txt">Four</a></li>
-<!--      <li><a href="5.txt">Five</a></li> -->
+      <li><a href="5.txt">Five</a></li>
 <!--      <li><a href="6.txt">Six</a></li> -->
 <!--      <li><a href="7.txt">Seven</a></li> -->
 <!--      <li><a href="8.txt">Eight</a></li> -->
