First draft of the last haiku

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <!--      <li><a href="25.txt">Twenty-Five</a></li> -->
 <!--      <li><a href="26.txt">Twenty-Six</a></li> -->
 <!--      <li><a href="27.txt">Twenty-Seven</a></li> -->
-<!--      <li><a href="28.txt">Twenty-Eight</a></li> -->
+      <li><a href="28.txt">Twenty-Eight</a></li>
     </ul>
 
     <h2>Contact</h2>
