--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <li><a href="5.txt">Five</a></li>
       <li><a href="6.txt">Six</a></li>
       <li><a href="7.txt">Seven</a></li>
-<!--      <li><a href="8.txt">Eight</a></li> -->
+      <li><a href="8.txt">Eight</a></li>
 <!--      <li><a href="9.txt">Nine</a></li> -->
 <!--      <li><a href="10.txt">Ten</a></li> -->
 <!--      <li><a href="11.txt">Eleven</a></li> -->
