--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
       <li><a href="6.txt">Six</a></li>
       <li><a href="7.txt">Seven</a></li>
       <li><a href="8.txt">Eight</a></li>
-<!--      <li><a href="9.txt">Nine</a></li> -->
-<!--      <li><a href="10.txt">Ten</a></li> -->
+      <li><a href="9.txt">Nine</a></li>
+      <li><a href="10.txt">Ten</a></li>
 <!--      <li><a href="11.txt">Eleven</a></li> -->
 <!--      <li><a href="12.txt">Twelve</a></li> -->
 <!--      <li><a href="13.txt">Thirteen</a></li> -->
