--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
       <li><a href="10.txt">Ten</a></li>
       <li><a href="11.txt">Eleven</a></li>
       <li><a href="12.txt">Twelve</a></li>
-<!--      <li><a href="13.txt">Thirteen</a></li> -->
-<!--      <li><a href="14.txt">Fourteen</a></li> -->
-<!--      <li><a href="15.txt">Fifteen</a></li> -->
-<!--      <li><a href="16.txt">Sixteen</a></li> -->
+      <li><a href="13.txt">Thirteen</a></li>
+      <li><a href="14.txt">Fourteen</a></li>
+      <li><a href="15.txt">Fifteen</a></li>
+      <li><a href="16.txt">Sixteen</a></li>
 <!--      <li><a href="17.txt">Seventeen</a></li> -->
 <!--      <li><a href="18.txt">Eighteen</a></li> -->
 <!--      <li><a href="19.txt">Nineteen</a></li> -->
