Haikus Seventeen to Twenty: Catching up after a busy few days.
Seventeen to Nineteen were actually written on my Blackberry while I was in bed this morning.

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
       <li><a href="14.txt">Fourteen</a></li>
       <li><a href="15.txt">Fifteen</a></li>
       <li><a href="16.txt">Sixteen</a></li>
-<!--      <li><a href="17.txt">Seventeen</a></li> -->
-<!--      <li><a href="18.txt">Eighteen</a></li> -->
-<!--      <li><a href="19.txt">Nineteen</a></li> -->
-<!--      <li><a href="20.txt">Twenty</a></li> -->
+      <li><a href="17.txt">Seventeen</a></li>
+      <li><a href="18.txt">Eighteen</a></li>
+      <li><a href="19.txt">Nineteen</a></li>
+      <li><a href="20.txt">Twenty</a></li>
 <!--      <li><a href="21.txt">Twenty-One</a></li> -->
 <!--      <li><a href="22.txt">Twenty-Two</a></li> -->
 <!--      <li><a href="23.txt">Twenty-Three</a></li> -->
