The past week's haikus, all typed up (at the eleventh hour... or thirteen minutes past it, to be precise)

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
       <li><a href="18.txt">Eighteen</a></li>
       <li><a href="19.txt">Nineteen</a></li>
       <li><a href="20.txt">Twenty</a></li>
-<!--      <li><a href="21.txt">Twenty-One</a></li> -->
-<!--      <li><a href="22.txt">Twenty-Two</a></li> -->
-<!--      <li><a href="23.txt">Twenty-Three</a></li> -->
-<!--      <li><a href="24.txt">Twenty-Four</a></li> -->
-<!--      <li><a href="25.txt">Twenty-Five</a></li> -->
-<!--      <li><a href="26.txt">Twenty-Six</a></li> -->
-<!--      <li><a href="27.txt">Twenty-Seven</a></li> -->
+      <li><a href="21.txt">Twenty-One</a></li>
+      <li><a href="22.txt">Twenty-Two</a></li>
+      <li><a href="23.txt">Twenty-Three</a></li>
+      <li><a href="24.txt">Twenty-Four</a></li>
+      <li><a href="25.txt">Twenty-Five</a></li>
+      <li><a href="26.txt">Twenty-Six</a></li>
+      <li><a href="27.txt">Twenty-Seven</a></li>
 <!--      <li><a href="28.txt">Twenty-Eight</a></li> -->
     </ul>
 
